fix dock position on smaller screens

--- a/src/components/dock/dock.scss
+++ b/src/components/dock/dock.scss
@@ -24,3 +24,10 @@
     display: flex;
     list-style: none;
 }
+
+@media screen and (min-height: 600px) and (max-height: 900px) {
+    .dock {
+      bottom: -230px;
+      left: 16%;
+    }
+}
